--- a/styles/base.css
+++ b/styles/base.css
@@ -48,6 +48,7 @@ main {
     display: flex;
     justify-content: space-between;
     margin-top: 20px;
+    max-width: 100%;
 }
 
 .about-section {
