--- a/styles/place.css
+++ b/styles/place.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
     color: var(--font-color);
@@ -21,7 +21,7 @@ header {
 main {
     position: relative;
     height: 100vh;
-    overflow: hidden;
+    overflow: hidden; /* Prevent scrolling in wider view */
 }
 
 
@@ -54,24 +54,8 @@ main {
     z-index: 1;
 }
 
-.mobile-icon {
-    display: none;
-}
-
-.wider-icon {
-    display: inline;
-}
-
-
+/* Mobile layout */
 @media (max-width: 600px) {
-
-   .mobile-icon {
-        display: inline;
-    }
-    .wider-icon {
-        display: none;
-    }
-
     header {
         order: 1;
     }
